<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".AdminLoginFragment">

    <!-- TODO: Update blank fragment layout -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/admin_email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="70dp"
            android:layout_marginEnd="7dp"
            android:layout_marginRight="7dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/edit_text_background"
            android:drawableLeft="@drawable/email_icon"
            android:hint="@string/admin_eamil_hint"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            app:layout_constraintBottom_toTopOf="@+id/admin_password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.914" />

        <EditText
            android:id="@+id/admin_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginEnd="7dp"
            android:layout_marginRight="7dp"
            android:layout_marginBottom="50dp"
            android:background="@drawable/edit_text_background"
            android:drawableLeft="@drawable/password_icon"
            android:hint="@string/admin_pass_hint"
            android:inputType="textPassword"
            android:padding="10dp"
            app:layout_constraintBottom_toTopOf="@+id/admin_login_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/admin_login_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginEnd="7dp"
            android:layout_marginRight="7dp"
            android:layout_marginBottom="124dp"
            android:background="@drawable/button_background"
            android:text="@string/login_button_text"
            android:textColor="@color/text_color"
            app:backgroundTint="@color/app_items"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/admin_goToRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="12dp"
            android:gravity="center_horizontal"
            android:text="Don't have an account?Register here"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/admin_login_button" />

        <ProgressBar
            android:id="@+id/pb_admin_login"
            style="?android:attr/progressBarStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:outlineSpotShadowColor="#5EFF61"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/admin_login_button" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>